# Hospital_Management_System

./: .gitignore  .python-version  README.md  app.py  doctors_data.csv  hospital_management.db  pyproject.toml  requirements.txt  sync_doctors.py  template.py
check_update_db/: check_db.py  update_db.py
notebook/: test_notebook.ipynb
src/: ai_engine copy.py  ai_engine.py  appointment_manager.py  database_manager.py  embeddings.py  loader.py  logger.py  processor.py  retriever.py  vector_store.py
static/: script.js  style.css
templates/: all_appointments_detail.html  appointment.html  chat.html  dashboard.html  index.html  reception_gateway.html  view_doctors.html
